# BitForge

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run.sh  run.sh
bitforge/: bitforge.cpp  bitforge.hpp  camera.hpp  framebuffer.hpp  main.cpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp
include/: camera.hpp  framebuffer.hpp  mesh.hpp  model.hpp  renderer.hpp  texture.hpp
include/glad/: glad.c  glad.h
include/glfw/: glfw3.h  glfw3native.h
resources/models/cube/: cube.mtl
resources/shaders/: default.frag  framebuffer.frag
src/: delattime.cpp  fpscounter.cpp  main.cpp  renderer.cpp
